@@ -1,3 +1,7 @@
+Jun 10, 2022
+  BulkGeneRename: better logging
+  BulkGeneMerge: better logging
+
 Jun 03, 2022
   BulkGeneRename: better qc
 
